--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ const Strategies = [
 "Only one element of each kind",
 "Openly resist change",
 "Question the heroic approach",
-"Remember quiet evenings",
+"Remember .those quiet evenings",
 "Remove a restriction",
 "Remove ambiguities and convert to specifics",
 "Remove specifics and convert to ambiguities",
@@ -175,6 +175,8 @@ const Strategies = [
 "Your mistake was a hidden intention"
 // no comma after the last one!
 ];
+
+// "More cowbell!"
 
 var strategy = document.getElementById('Strategy');
 strategy.innerHTML = Strategies[ Math.floor( Math.random() * Strategies.length )];
