--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ const Strategies = [
 "Which elements can be grouped?",
 "Which frame would make it look right?",
 "Which frame would make this look right?",
-"Who sould be doing this job?<br>How would they do it?",
+"Who should be doing this job?<br>How would they do it?",
 "Work at a different speed",
 "Would anybody want it?",
 "You are an engineer",
