adding some javascript

--- a/index.html
+++ b/index.html
@@ -40,6 +40,30 @@ and others will become self-evident.
 
 <script>
 
+/*
+	// first test:
+	alert("Hello world!");
+*/
+/*
+	// version 0.1
+	window.onload = function(){
+		var strategy = document.getElementById('Strategy');
+		strategy.innerHTML = "Ask: WTF!?";
+	}; //window.onload
+*/
+/*
+	// version 0.2
+	window.onload = function(){
+		var strategy = document.getElementById('Strategy');
+		strategy.innerHTML = "Ask: WTF!?";
+
+		if( Math.random() > 0.5 ){
+			strategy.innerHTML = "Just follow along.";
+		}
+
+		}; //window.onload
+*/
+
 window.onload = function(){
 
 const Strategies = [
